# meshcore-matrix-bridge

./: .gitignore  CHANGELOG.md  LICENSE  README.de.md  README.md  bridge.env.example  pyproject.toml
.github/workflows/: ci.yml
docs/: meshcore-protocol.md
src/meshcore_matrix_bridge/: __init__.py  bridge.py  chart.py  cli.py  commands.py  config.py  droplog.py  matrixbot.py  meshnode.py  state.py  telemetrylog.py  textsplit.py
systemd/: meshcore-matrix-bridge.service
tests/: test_commands.py  test_config.py  test_droplog.py  test_state.py  test_textsplit.py
