[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meshcore-matrix-bridge"
version = "0.1.0"
description = "Bridge between a MeshCore Companion node (USB serial) and Matrix."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "klempi" }]
dependencies = [
    "meshcore>=2.3,<3",
    "matrix-nio>=0.25,<1",
    "aiofiles>=23",
]

[project.optional-dependencies]
dev = ["ruff>=0.5", "mypy>=1.10"]

[project.scripts]
meshcore-matrix-bridge = "meshcore_matrix_bridge.bridge:main"
mc-bridge = "meshcore_matrix_bridge.bridge:main"
mc-cli    = "meshcore_matrix_bridge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
