[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meshcore-matrix-bridge"
version = "0.5.0"
description = "Bridge between a MeshCore Companion node (USB serial or BLE) and a Matrix homeserver."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "klempi" }]
keywords = ["meshcore", "matrix", "lora", "mesh", "bridge", "ham-radio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Communications :: Ham Radio",
]
dependencies = [
    "meshcore>=2.3,<3",
    "matrix-nio>=0.25,<1",
]

[project.urls]
Homepage = "https://github.com/Basti77/meshcore-matrix-bridge"
Source = "https://github.com/Basti77/meshcore-matrix-bridge"
Issues = "https://github.com/Basti77/meshcore-matrix-bridge/issues"
Changelog = "https://github.com/Basti77/meshcore-matrix-bridge/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# `!mesh chart` renders PNG charts; everything else works without matplotlib.
chart = ["matplotlib>=3.7"]
dev = ["ruff>=0.5", "mypy>=1.10", "pytest>=8"]

[project.scripts]
meshcore-matrix-bridge = "meshcore_matrix_bridge.bridge:main"
mc-bridge = "meshcore_matrix_bridge.bridge:main"
mc-cli    = "meshcore_matrix_bridge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
